# Redax.dev

./: .gitignore  Cargo.toml  README.md
Ingress streaming processor/: Ingress streaming processor.sln  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml
Ingress streaming processor/Common/: Common.csproj  GDAX.cs  PairedBiDirectionalBus.cs  websocket.cs  websocketManager.cs
Ingress streaming processor/Nginx WS Stepdown/: Dockerfile  nginx.conf
Ingress streaming processor/Redis Loader Lib/: redisloaderlib.cs
Ingress streaming processor/Redis loader/: Program.cs  Redis loader.csproj
Ingress streaming processor/RedisBuilder/: Dockerfile  redis.conf
Ingress streaming processor/RedisLoader/: Dockerfile  GDAX Stream reader.csproj  Program.cs  Redis Loader.csproj  main.cs
Ingress streaming processor/RedisLoader/Properties/: launchSettings.json
Ingress streaming processor/RedisLoaderLib/: GDAX WS Client Lib.csproj  Redis Loader Lib.csproj  main.cs  redisloaderlib.cs
Ingress streaming processor/Stream conversion service CORECLR/: Main.cs  Stream conversion service CORECLR.csproj
Ingress streaming processor/Websocket Record/: Program.cs  Websocket Record.csproj
Ingress streaming processor/Websocket Record Standard/: Websocket Record Standard.csproj  standard classes.cs
Standard Lib/: Standard Lib.sln
etc/: redis.conf
gdax_websocket_ingress_service/: Cargo.toml
rust/src/: main.rs
src/: main.rs
