[package]
name = "project"
version = "0.1.0"
authors = ["Paul G Webster <paul.g.webster@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.13.0"
url = "2.2.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
redis = "0.20.0"

